# MDMA

./: .gitignore  LISCENSE.txt  README.md  func_and_opcodes.json  mdma.py  op_formatting.py  pyproject.toml
mdma/: __init__.py  __main__.py  data_segment.py  func_and_opcodes.json  machine_code.py  mips_instruction.py  op_formatting.py
tests/: test_data_segment.py  test_encoding_and_decoding.py  test_op_format.py
