[tool.poetry]
name = "mdma"
version = "0.1.0"
description = "A package for decoding/encoding MIPS Assembly Language machine code"
authors = ["Ethan Mann <emannguitar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PrettyTable = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
